<resources>
    <string name="app_name">Ocean Recorder TV</string>

    <string name="title_recorder">Recorder</string>
    <string name="title_recordings">Recordings</string>

    <string name="btn_start">Start recording</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_play">Play</string>
    <string name="btn_stop_playback">Stop playback</string>

    <string name="status_idle">Idle</string>
    <string name="status_recording">Recording…</string>
    <string name="status_ready">Ready</string>
    <string name="status_no_mic">Microphone unavailable</string>
    <string name="status_permission_needed">Microphone permission needed</string>
</resources>
